# wee

./: .dockerignore  Cargo.toml  README.md  architecture.excalidraw  docker-compose.dev.yml  docker-compose.yml
.docker/configs/nginx/: default.conf
.docker/configs/redirect/: default.toml
.docker/configs/shorten/: default.toml
core/: Cargo.toml
core/src/: lib.rs
core/src/domain/: mod.rs
core/src/domain/entities/: mod.rs  url.rs
core/src/domain/metadata/: mod.rs  url_indexes.rs
core/src/domain/repos/: mod.rs  url_repo.rs
core/src/outbound/mongodb/: mod.rs  url_repo.rs
core/src/outbound/redis/: mod.rs
core/tests/: test_mongo_url_repo.rs  utils.rs
public/: index.html
redirect/: Cargo.toml  Dockerfile
redirect/configs/: default.toml  test.toml
redirect/src/: app_config.rs  lib.rs  main.rs
redirect/src/inbound/rest/: error.rs
redirect/src/inbound/rest/handlers/: redirect.rs
redirect/src/outbound/redis/: mod.rs  redirect_service_cache.rs
redirect/src/services/: mod.rs
redirect/src/services/redirect_service/: cache.rs  error.rs  mod.rs
shorten/: Cargo.toml  Dockerfile
shorten/configs/: default.toml  test.toml
shorten/src/: app_config.rs  lib.rs  main.rs
shorten/src/inbound/rest/: error.rs
shorten/src/inbound/rest/handlers/: mod.rs  shorten.rs
shorten/src/outbound/: mod.rs
shorten/src/outbound/redis/: mod.rs  shorten_service_cache.rs
shorten/src/outbound/zookeeper/: id_generator.rs  mod.rs
shorten/src/services/: mod.rs
shorten/src/services/shorten_service/: cache.rs  error.rs  id_generator.rs  mod.rs
shorten/tests/: test_redis_long_url_cache.rs  test_zookeeper_id_generator.rs  utils.rs
wee-bruno/: bruno.json  collection.bru
wee-bruno/nginx/: folder.bru  redirect copy.bru  shorten.bru
wee-bruno/redirect/: folder.bru  redirect.bru
wee-bruno/shorten/: folder.bru  ping.bru  shorten.bru
