[package]
edition = "2024"
name    = "wee-redirect"
version = "0.1.0"

[dependencies]
anyhow             = { workspace = true }
axum               = { workspace = true }
bon.workspace      = true
config.workspace = true
map-macro.workspace = true
mongodb            = { workspace = true }
nestify.workspace = true
redis              = { workspace = true }
serde.workspace = true
serde_json         = { workspace = true }
thiserror          = { workspace = true }
tokio              = { workspace = true }
tower              = { workspace = true }
tower-http         = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
wee-core           = { path = "../core" }

[dev-dependencies]
pretty_assertions.workspace = true
