[package]
edition = "2021"
name    = "wee-shorten"
version = "0.1.0"

[dependencies]
anyhow             = { workspace = true }
axum               = { workspace = true }
base62             = "2.2.1"
bon                = { workspace = true }
chrono             = { workspace = true }
config             = { workspace = true }
futures-util       = { workspace = true }
map-macro.workspace = true
mongodb            = { workspace = true }
nestify            = { workspace = true }
pretty_assertions  = { workspace = true }
redis              = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
tap                = { workspace = true }
thiserror          = { workspace = true }
tokio              = { workspace = true }
tokio-zookeeper    = "0.4.0"
tower              = { workspace = true }
tower-http         = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
validator          = { workspace = true }
wee-core           = { path = "../core" }

[dev-dependencies]
pretty_assertions = "1.4.1"
test-log          = "0.2.17"
